# django-admin-lightweight-date-hierarchy

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
django_admin_lightweight_date_hierarchy/: admin.py  apps.py  utils.py
django_admin_lightweight_date_hierarchy/templatetags/: admin_list.py  ldh_admin_list.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: README.md  db.sqlite3  requirements.txt
example/example/: settings.py
example/sales/: admin.py  models.py
example/sales/fixtures/dev/: sale.json
example/sales/migrations/: 0001_initial.py  0002_salewithcustomdrilldown_salewithdrilldown.py
tests/: admin.py  models.py  settings.py  tests.py  urls.py
tests/tests/: test_date_heirarchy_drill_down.py  test_range_based_date_hierarchy.py  test_utils.py  utils.py
