[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-lightweight-date-hierarchy"
version = "1.3.0"
description = "Use Django Admin date hierarchy queries freely!"
readme = "README.rst"
requires-python = ">=3.7"
authors = [
    { name = "Haki Benita", email = "hakibenita@gmail.com" },
]
license = {text = "MIT, Django"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=3.2.0",
]
[project.urls]
Repository = "https://github.com/hakib/django-admin-lightweight-date-hierarchy"

[tool.setuptools]
packages = [
    "django_admin_lightweight_date_hierarchy",
    "django_admin_lightweight_date_hierarchy.templatetags",
]
[tool.setuptools.package-data]
"django_admin_lightweight_date_hierarchy" = ["py.typed"]

[tool.mypy]
strict = true
disallow_subclassing_any = false
python_version = "3.7"
files = [
    "django_admin_lightweight_date_hierarchy/**/*.py",
    "example/**/*.py",
    "tests/**/*.py",
]
[[tool.mypy.overrides]]
module = [
    "django.*",
]
ignore_missing_imports = true
