[metadata]
name = django-admin-lightweight-date-hierarchy
version = 1.0.1
description = Using django admin date hierarchy queries free!
long_description = file: README.rst
long_desription_content_type = text/x-rst
author = Haki Benita
author_email = hakibenita@gmail.com
url = https://github.com/hakib/django-admin-lightweight-date-hierarchy
license = MIT, Django
keywords = django-admin-lightweight-date-hierarchy
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = django_admin_lightweight_date_hierarchy
python_requires = >=3.7
include_package_data = True
install_requires = Django>=2.2
